<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ybarhoush.bankapplication.newPaymentActivity">


    <TextView
        android:id="@+id/textView_accountNewPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:color/holo_red_light"
        android:padding="20dp"
        android:text="@string/textView_accountNewPayment"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/textView_recName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/textView_recName"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="133dp" />

    <EditText
        android:id="@+id/editText_recName"
        android:layout_width="320dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/editText_recName"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="160dp" />

    <TextView
        android:id="@+id/textView_recAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/textView_recAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <EditText
        android:id="@+id/editText_recAccount"
        android:layout_width="320dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/editText_recAccount"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="241dp" />

    <TextView
        android:id="@+id/textView_paymentInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"

        android:layout_marginTop="13dp"
        android:text="@string/textView_paymentInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_weight="4"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/editText_date"
                android:inputType="date"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="410dp" />

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/textView_date"
                android:textStyle="italic"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="457dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_data"
                android:layout_width="252dp"
                android:layout_height="wrap_content"

                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/editText_amount"
                android:inputType="numberSigned"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="410dp" />

            <TextView
                android:id="@+id/textView_ammount"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/textView_amount"
                android:textStyle="italic"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="457dp" />
        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_accept"
            android:layout_width="100dp"
            android:layout_height="50dp"

            android:layout_marginBottom="60dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:onClick="accept"
            android:text="@string/button_accept"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>

</ScrollView>
