<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ybarhoush.bankapplication.MainActivity">

    <LinearLayout
        android:id="@+id/layoutVertical_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="20dp"
            android:text="@string/textView_account"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" android:paddingStart="20dp" />

        <Button
            android:id="@+id/button_myInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:text="@string/textView_myInformation"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_bankDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:text="@string/textView_bankDetails"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_payments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:paddingLeft="20dp"
            android:text="@string/textView_payments"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" android:paddingStart="20dp" />

        <Button
            android:id="@+id/button_newPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:onClick="newPayment"
            android:text="@string/textView_newPayment"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/textView_history"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
